--- a/MVC/appsettings.json
+++ b/MVC/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MvcExampleP34DB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=MvcStore.db"
   },
   "Logging": {
     "LogLevel": {
